src/objects/tdc_tsw__Survey__c.object
<CustomObject>
    <fields>
        <fullName>tdc_tsw__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Brief_Description__c</fullName>
        <label>Brief Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Keywords__c</fullName>
        <inlineHelpText>Initiates the survey automatically when a message containing any of the keywords is received. You can provide multiple keywords with ‘||’ separated values eg START || TRY etc.</inlineHelpText>
        <label>Keywords</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Object__c</fullName>
        <label>Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Survey</label>
    <nameField>
        <label>Survey Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Survey</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>